--- a/DwMember/Base.lproj/LaunchScreen.storyboard
+++ b/DwMember/Base.lproj/LaunchScreen.storyboard
@@ -19,7 +19,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-n" translatesAutoresizingMaskIntoConstraints="NO" id="gBe-4u-Wgu">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="zdlogo-n" translatesAutoresizingMaskIntoConstraints="NO" id="gBe-4u-Wgu">
                                 <rect key="frame" x="112.5" y="158.5" width="150" height="150"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="dXs-yq-6J4"/>
@@ -40,6 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="logo-n" width="981" height="902"/>
+        <image name="zdlogo-n" width="857" height="857"/>
     </resources>
 </document>
