--- a/DwMember/Base.lproj/LaunchScreen.storyboard
+++ b/DwMember/Base.lproj/LaunchScreen.storyboard
@@ -19,8 +19,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-n" translatesAutoresizingMaskIntoConstraints="NO" id="gBe-4u-Wgu">
-                                <rect key="frame" x="112.5" y="158.5" width="150" height="150"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="logo-n" translatesAutoresizingMaskIntoConstraints="NO" id="gBe-4u-Wgu">
+                                <rect key="frame" x="62" y="208" width="250" height="250"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="150" id="dXs-yq-6J4"/>
                                     <constraint firstAttribute="height" constant="150" id="ug5-6M-bPl"/>
